--- a/src/common/components/appDetails/styles.module.sass
+++ b/src/common/components/appDetails/styles.module.sass
@@ -1,4 +1,9 @@
 
+.main
+    display: flex
+    flex-direction: column
+    row-gap: 1rem
+
 .info
     display: flex
     flex-direction: column
@@ -6,3 +11,6 @@
     border-radius: 0.25rem
     border: 1px solid var(--color-accent)
     padding: 1rem
+    row-gap: 1rem
+    margin-bottom: 1rem
+    font-weight: 500
