--- a/src/modules/header/styles.module.sass
+++ b/src/modules/header/styles.module.sass
@@ -7,14 +7,11 @@
     align-items: center
     background: var(--color-accent)
     min-height: 4rem
-    padding: 1rem 1.5rem
+    padding: 0 1.5rem
     column-gap: 1.5rem
 
-    nav
-        ul
-            display: flex
-            list-style: none
-
-            li
-                padding: 8px 16px
-                color: var(--color-foreground)
+.nav
+    display: flex
+    align-items: center
+    height: 4rem
+    column-gap: 1.5rem
